@@ -1,7 +1,7 @@
 Package: R2admb
 Type: Package
 Title: ADMB to R interface functions
-Version: 0.7.5
+Version: 0.7.5.1
 Date: 2012-12-18
 Author: Ben Bolker, Hans Skaug
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
