@@ -1,7 +1,7 @@
 export(setup_admb,clean_admb,do_admb,compile_admb,run_admb,
        read_admb,read_psv,read_pars,
        stdEr,run.control,mcmc.control,
-       write_pin,write_dat)
+       write_pin,write_dat,dat_write)
 ## import(ggplot2)
 
 S3method(print,admb)
